{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 996,
  "lineage": "64a30996-7468-a8a5-e53c-e705f4e5592c",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:internet-gateway/igw-0b2b4d277309a4f6d",
            "id": "igw-0b2b4d277309a4f6d",
            "owner_id": "058898200941",
            "tags": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-igw",
              "Project": "spot-ondemand-failover"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-igw",
              "Project": "spot-ondemand-failover"
            },
            "vpc_id": "vpc-0e33a94b4fdd5d279"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2b4d277309a4f6d",
            "id": "r-rtb-0a011ddea169a5f101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a011ddea169a5f10",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:route-table/rtb-0a011ddea169a5f10",
            "id": "rtb-0a011ddea169a5f10",
            "owner_id": "058898200941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2b4d277309a4f6d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-public-route-table",
              "Project": "spot-ondemand-failover"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-public-route-table",
              "Project": "spot-ondemand-failover"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e33a94b4fdd5d279"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2d5310238541716",
            "route_table_id": "rtb-0a011ddea169a5f10",
            "subnet_id": "subnet-03b4ec17f96a12cc4"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e38a0c0ec0b9749",
            "route_table_id": "rtb-0a011ddea169a5f10",
            "subnet_id": "subnet-003ff856963b69e77"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:subnet/subnet-03b4ec17f96a12cc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b4ec17f96a12cc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-public-subnet-1",
              "Project": "spot-ondemand-failover",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-public-subnet-1",
              "Project": "spot-ondemand-failover",
              "Type": "public"
            },
            "vpc_id": "vpc-0e33a94b4fdd5d279"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:subnet/subnet-003ff856963b69e77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003ff856963b69e77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058898200941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-public-subnet-2",
              "Project": "spot-ondemand-failover",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-public-subnet-2",
              "Project": "spot-ondemand-failover",
              "Type": "public"
            },
            "vpc_id": "vpc-0e33a94b4fdd5d279"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:vpc/vpc-0e33a94b4fdd5d279",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0513330b1e5b4aba6",
            "default_route_table_id": "rtb-09478f9c689b86daa",
            "default_security_group_id": "sg-0171ed268a59731a2",
            "dhcp_options_id": "dopt-64708a0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e33a94b4fdd5d279",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09478f9c689b86daa",
            "owner_id": "058898200941",
            "tags": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-vpc",
              "Project": "spot-ondemand-failover"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spot-ondemand-failover-dev-vpc",
              "Project": "spot-ondemand-failover"
            }
          }
        }
      ]
    },
    {
      "module": "module.spot_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ondemand-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027fff96cc515f7bc",
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:instance/i-005ae0be97d2e66b4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdf",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Env": "dev",
                  "Name": "spot-ondemand-failover-dev-spot-db-volume",
                  "Project": "spot-ondemand-failover"
                },
                "tags_all": {
                  "Env": "dev",
                  "Name": "spot-ondemand-failover-dev-spot-db-volume",
                  "Project": "spot-ondemand-failover"
                },
                "throughput": 125,
                "volume_id": "vol-0b532ccde71c84d07",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "spot-ondemand-failover-dev-ec2-ebs-profile",
            "id": "i-005ae0be97d2e66b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "shutting-down",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "spot-ondemand-failover-dev-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067e74afc08e347bf",
            "private_dns": "ip-192-168-1-103.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.103",
            "public_dns": "ec2-52-196-3-237.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.196.3.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e4c5835e7444d64",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b4ec17f96a12cc4",
            "tags": {
              "Env": "dev",
              "Name": "spot-ondemand-failover-dev-ondemand-db",
              "Project": "spot-ondemand-failover",
              "Type": "ondemand"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "spot-ondemand-failover-dev-ondemand-db",
              "Project": "spot-ondemand-failover",
              "Type": "ondemand"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aaa2ca33803c2986"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc",
            "module.spot_instance.aws_iam_instance_profile.ec2_ebs_profile",
            "module.spot_instance.aws_iam_role.ec2_ebs_role",
            "module.spot_instance.aws_key_pair.keypair",
            "module.spot_instance.aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.spot_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:058898200941:security-group/sg-0aaa2ca33803c2986",
            "description": "Security group for DB server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aaa2ca33803c2986",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "spot-ondemand-failover-dev-db-sg",
            "name_prefix": "",
            "owner_id": "058898200941",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e33a94b4fdd5d279"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}